feat: update api for new config
